
<package>
  <name>rqt_traadre_viz</name>
  <version>0.0.0</version>
  <description>rqt_traadre_viz is some data visualization tools for the TRAADRE project</description>
  <maintainer email="stephen.mcguire@colorado.edu">Steve McGuire</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_nav_view</url>
  <url type="repository">https://github.com/ros-visualization/rqt_robot_plugins</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_robot_plugins/issues</url>

  <author>Steve McGuire</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>qt_gui</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_py_common</run_depend>
  <run_depend>tf</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml" />
  </export>

</package>


